# webcrawler-with-python

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  crawl.py  main.py  pyproject.toml
docs/: api.rst  conf.py  index.rst
tests/: test_crawl.py
