[project]
name = "webcrawler-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aiohttp==3.12.12",
    "beautifulsoup4==4.13.4",
    "requests==2.32.4",
]

[tool.bandit]
exclude_dirs = [".venv"]
skips = ["B101"]

[tool.pylint.main]
ignore-paths = ["docs"]
source-roots = ["."]

[tool.pylint.messages_control]
disable = [
    "use-implicit-booleaness-not-comparison",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "ruff>=0.11.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pydocstyle>=6.3.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-lint>=1.0.2",
    "types-requests>=2.33.0.20260518",
]
